<resources>
    <string name="app_name">Olá!</string>
    <string name="label_business_cads">Cartão de Visita</string>
    <string name="label_business_cards">Cartão de Visita</string>
    <string name="label_name">Nome</string>
    <string name="label_phone">Telefone</string>
    <string name="label_email">E-mail</string>
    <string name="label_company">Company</string>
    <string name="color">Color</string>
    <string name="confirm">Confirm</string>
    <string name="label_show_success">Cartão cadastrado com sucesso</string>
    <string name="label_share">Compartilhar</string>
</resources>